# FileTraceSKSE

./: .gitignore  CMakeLists.txt  FileTraceSKSE.ini  README.md  build.bat  skse-project.json
src/: PCH.h  main.cpp
src/main/: cpp.old
